Refs #2308: Added translations for core web templates

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1794,3 +1794,40 @@ wizard.tell_friend.sending=Sending
 
 wizard.multi_online_storage_setup.local_folder_location=Local directory
 wizard.multi_online_storage_setup.select_directory=Select directory
+
+#################################
+# Translations for webinterface #
+#################################
+
+# login.vm
+web.core.login=Login
+web.core.sign_up=Sign up for a new account
+web.core.recover_password=Recover password
+web.core.recover_password.alert=Please enter your Email and press 'Recover password' again
+web.core.keep_logged_in=Keep me logged in
+
+# register.vm
+web.core.already_registered=Already registered? Login here.
+web.core.download_client=Download the client app
+web.core.confirm=Confirm
+web.core.register=Register
+
+# activation.vm
+web.core.activate=Activate
+web.core.purchase_server_license=Purchase server license
+web.core.demo_license=Get a demo license
+
+# loginshare.vm
+web.core.invalid_user_pass=Invalid username or password
+
+# login_snippet_form.vm
+web.core.forgotten=Forgot?
+
+# download_client.vm
+web.core.app_starts_soon=The windows app starts in a few second
+web.core.start_via_webstart=Start via Java WebStart (Mac, Linux) instead
+web.core.download_linux=Download for Linux (WebStart)
+web.core.download_mac=Download for Mac
+web.core.download_windows=Download for Windows
+web.core.mobile_app=Mobile app / Server address:
+
