--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1304,6 +1304,7 @@ preferences.dialog.open_port=Automatically open Windows Firewall
 preferences.dialog.plugin.class_name=Java classname
 preferences.dialog.plugin.description=Description
 preferences.dialog.plugin.name=Name
+preferences.dialog.use_conflict_handling=Conflict handling
 preferences.dialog.plugin.status=Status
 preferences.dialog.plugin.status_disabled=Disabled
 preferences.dialog.plugin.status_enabled=Enabled
