--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -945,7 +945,7 @@ friend_search.node_table.on_local_network=LAN
 friendship.notification.message=You have received a connection request.
 friendship.notification.title=Connection request received
 
-folders_tab.auto_accept.text=Auto accept new
+folders_tab.auto_accept.text=Auto accept invites
 folders_tab.auto_accept.tip=Automatically accept invitations to new folders.
 folders_tab.connecting=Connecting...
 folders_tab.not_logged_in=Not logged in
