More TypicalFolderSetupPanel, refs #2327

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1718,6 +1718,7 @@ wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
 wizard.multi_online_storage_setup.title=Configure folder(s)
+wizard.typical_folder_setup.title=Configure folder
 wizard.pfwizard.folder_title=Folder Wizard
 pro.wizard.pfwizard.activation_title=Activation Wizard
 wizard.pfwizard.invitation_title=Invitation Wizard
