--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1448,6 +1448,8 @@ shutdown.title=Shutdown
 
 skin.black_moon=Black Moon
 skin.black_star=Black Star
+skin.classy=Classy
+skin.black_eye=Black Eye
 skin.blue_ice=Blue Ice
 skin.blue_moon=Blue Moon
 skin.blue_steel=Blue Steel
@@ -1456,6 +1458,7 @@ skin.mauve_metallic=Mauve Metallic
 skin.orange_metallic=Orange Metallic
 skin.silver_moon=Silver Moon
 skin.sky_metallic=Sky Metallic
+skin.simple_2d=Simple 2D
 skin.white_vision=White Vision
 
 start_tab.welcome_text=Welcome to {APPNAME}
