--- a/build.xml
+++ b/build.xml
@@ -106,21 +106,22 @@ For creation of the installer:
       		<include name="jfreechart/jcommon-1.0.16.jar" />
 
 			<include name="synthetica/commons-logging-1.1.jar" />
-			<include name="synthetica/flexdock.jar" />
-			<include name="synthetica/swing-worker-1.1.jar" />
 			<include name="synthetica/swingx.jar" />
 			<include name="synthetica/synthetica.jar" />
 			<include name="synthetica/syntheticaAddons.jar" />
 			<include name="synthetica/syntheticaBlackMoon.jar" />
 			<include name="synthetica/syntheticaBlackStar.jar" />
+			<include name="synthetica/syntheticaBlackEye.jar" />
 			<include name="synthetica/syntheticaBlueIce.jar" />
 			<include name="synthetica/syntheticaBlueMoon.jar" />
 			<include name="synthetica/syntheticaBlueSteel.jar" />
 			<include name="synthetica/syntheticaGreenDream.jar" />
 			<include name="synthetica/syntheticaMauveMetallic.jar" />
 			<include name="synthetica/syntheticaOrangeMetallic.jar" />
+			<include name="synthetica/syntheticaClassy.jar" />
 			<include name="synthetica/syntheticaSilverMoon.jar" />
 			<include name="synthetica/syntheticaSkyMetallic.jar" />
+			<include name="synthetica/syntheticaSimple2D.jar" />
 			<include name="synthetica/syntheticaWhiteVision.jar" />
 		</fileset>
 
