--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1664,6 +1664,8 @@ wizard.control.cancel=Cancel
 wizard.control.finish.description=Exit this wizard task
 wizard.control.finish=Exit
 wizard.control.help.description=Show online help (Alt-8)
+wizard.control.no_folder.title=Folder not found
+wizard.control.no_folder.description=This folder could not be found.
 wizard.control.help=Help
 wizard.control.next.description=Go to next wizard step
 wizard.control.next=Next
@@ -1678,6 +1680,8 @@ wizard.finish.os_login_text=The login was successful.
 wizard.finish.os_login_title=Login Successful
 wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 wizard.folder_invitation.title=Folder Invitation
+wizard.folder_auto_create.title=Folder Created
+wizard.folder_auto_create.info=A new folder has been automatically created.
 wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 wizard.folder_online_storage.backup_success_title=Cloud setup successful
 wizard.folder_online_storage.remove_success_message=The folder was successfully removed from cloud space
