More work on Wizard, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1682,6 +1682,7 @@ wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 wizard.folder_invitation.title=Folder Invitation
 wizard.folder_auto_create.title=Folder Created
 wizard.folder_auto_create.info=A new folder has been automatically created.
+wizard.folder_auto_create.cloud_space=Use cloud space
 wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 wizard.folder_online_storage.backup_success_title=Cloud setup successful
 wizard.folder_online_storage.remove_success_message=The folder was successfully removed from cloud space
