More work on Wizard, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1751,6 +1751,7 @@ wizard.send_invitations.sending_invites=Sending invite
 wizard.send_invitations.sending_invites.text=Please wait while sending invite.
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
+wizard.success_configure=You have successfully configure the folder\!
 wizard.webservice.enter_account=Please enter your account details below
 wizard.webservice.recover_password=Recover password
 wizard.webservice.learn_more=What is cloud space?
