Removed folder list, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -335,6 +335,10 @@ action_view_notices.description=View any notices
 action_view_notices.key=N
 action_view_notices.name=Notices
 
+action_undo_auto_create.description=Undo autocreate
+action_undo_auto_create.key=U
+action_undo_auto_create.name=Undo
+
 action_webdav.description=Mount as drive
 action_webdav.key=M
 action_webdav.name=Mount
