Fix incorrect translation value, refs #2207

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1047,7 +1047,7 @@ status_tab.new_friendship_notices=Friendship request(s)
 status_tab.new_warning_notices=Warning(s)
 status_tab.new_invitation_notices=Invitations(s)
 status_tab.no_computers=No other computers known
-status_tab.no_folders=No folders configured. Press "New Folder" to start.
+status_tab.no_folders=No folders configured. Click "Wizard" to start.
 status_tab.not_running=Not running
 status_tab.online_storage.account.tips=Click to change account details
 status_tab.online_storage.account={0} (change)
