--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -964,7 +964,6 @@ friends_panel.n_a=n/a
 friends_panel.unable_to_connect=Currently online (Unable to connect)
 
 general.application.name={APPNAME}
-general.powerfolders.name=PowerFolders
 general.local_archive_mode=File archive (local)
 general.online_archive_mode=File archive (online)
 general.accept=Accept
@@ -1625,6 +1624,8 @@ warning_notice.limited_connectivity=Limited connectivity detected
 warning_notice.poor_quality=Poor connection quality detected
 warning_notice.low_memory=Low memory detected
 warning_notice.mass_deletion=Mass deletion detected
+warning_notice.admin_login.summary=Administrator login
+warning_notice.admin_login.message=It's not recommended to login as administrator at the client app.\nThe list of folders won't be available. Please login as regular user.
 
 winutils.shortcut.description=This shortcut was placed here by {APPNAME}
 
