En/GB translation fixes.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -384,8 +384,8 @@ pro.http.options.port=Port
 pro.http.options.title=HTTP Connection settings
 pro.http.options.username=Username
 pro.http.options.withauth=With authorization
-pro.http.name=HTTP tunneled connections
-pro.http.description=HTTP connections tunneled via HTTP
+pro.http.name=HTTP tunnelled connections
+pro.http.description=HTTP connections tunnelled via HTTP
 pro.monitor.name=Remote Monitoring
 pro.monitor.description=Activates remote monitoring of this client
 pro.filelist_writer.name=Filelist Writer
@@ -465,7 +465,7 @@ pro.wizard.activation.limit_hit=Only {1} GBs data and {0} folders allowed.
 pro.wizard.activation.pro_activation=Activation
 pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.register_now=Sign up for an account
-pro.wizard.activation.register_now_trial=Please sign up for an free account to use {APPNAME}.
+pro.wizard.activation.register_now_trial=Please sign up for a free account to use {APPNAME}.
 pro.wizard.activation.subscribe_newsletter=Subscribe to newsletter
 pro.wizard.activation.successful=Activation successful
 pro.wizard.activation.thanks_activation=Thank you for activating {APPNAME}.
@@ -1536,7 +1536,7 @@ systray.tooltip.new_chat_message=New chat message
 systray.tooltip.up.mb=Up {0} MBs
 systray.tooltip.up=Up {0} KBs
 
-transfer.problem.broken.download=Tclhe transfer download was broken
+transfer.problem.broken.download=The transfer download was broken
 transfer.problem.broken.upload=The transfer upload was broken
 transfer.problem.file.not.found.exception=There was a FileNotFoundException\: {0}
 transfer.problem.general.exception=There was an Exception\: {0}
