--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1725,9 +1725,9 @@ wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait
 
 wizard.multi_file_restoring_panel.success_title=Files restored
 wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
-wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored. Problems have been logged.
+wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored.
 wizard.multi_file_restoring_panel.fail_title=File restore failed
-wizard.multi_file_restoring_panel.fail_text=No files have been restored. Problems have been logged.
+wizard.multi_file_restoring_panel.fail_text=No files have been restored.
 
 wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
