Recalc button, refs #2385

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -251,6 +251,10 @@ action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=C
 action_reconnect.name=Reconnect
 
+action_recalculate.description=Recalculate automatic rates now
+action_recalculate.key=R
+action_recalculate.name=Recalculate
+
 action_members_refresh.description=Refresh member list and permissions
 action_members_refresh.key=R
 action_members_refresh.name=Refresh
