Better preference buttons

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -247,6 +247,14 @@ action_paste.description=Paste text
 action_paste.key=P
 action_paste.name=Paste
 
+action_proxy.description=Configure HTTP proxy settings
+action_proxy.key=P
+action_proxy.name=Proxy settings
+
+action_preview.description=Preview notification settings
+action_preview.key=P
+action_preview.name=Preview
+
 action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=C
 action_reconnect.name=Reconnect
