--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -961,8 +961,8 @@ friend_search.node_table.on_local_network=LAN
 friendship.notification.message=You have received a connection request.
 friendship.notification.title=Connection request received
 
-folders_tab.auto_accept.text=Auto accept invites
-folders_tab.auto_accept.tip=Automatically accept invitations to new folders.
+folders_tab.auto_accept.text=Auto setup folders
+folders_tab.auto_accept.tip=Automatically setup new folders.
 folders_tab.connecting=Connecting...
 folders_tab.not_logged_in=Not logged in
 folders_tab.login=(Login)
@@ -1181,8 +1181,8 @@ network_statistics_panel.public_folders_size=Total size of all available files
 network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network.statistics.title=Network Statistics
 
-folder_auto_create_notice.title=New folder created
-folder_auto_create_notice.text=A new folder has been created: {0}
+folder_auto_create_notice.title=New folder found
+folder_auto_create_notice.text=A new folder has been found: {0}
 
 notification_form.title=<html><b>{APPNAME}</b><br>{0}</html>
 notification_form.never_show_chat_notifications=Never show chat notifications
@@ -1694,8 +1694,8 @@ wizard.finish.os_login_text=The login was successful.
 wizard.finish.os_login_title=Login Successful
 wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 wizard.folder_invitation.title=Folder Invitation
-wizard.folder_auto_create.title=Folder Created
-wizard.folder_auto_create.info=A new folder has been automatically created.
+wizard.folder_auto_create.title=Folder Found
+wizard.folder_auto_create.info=A new folder has been found.
 wizard.folder_auto_create.undo.title=Undo
 wizard.folder_auto_create.undo.text=Don't sync, share or backup this folder at all
 wizard.folder_auto_create.cloud_space=Use cloud space
