--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1530,6 +1530,7 @@ systray.powerfolder={APPNAME} v{0}
 systray.show=Show
 systray.sync_all=Sync Folders
 systray.sync_shutdown=Sync and Shutdown
+systray.sync_exit=Sync and Exit
 systray.notifications=Notifications
 systray.notifications.chat=Show Chat Notifications
 systray.notifications.system=Show System Notifications
