--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1210,6 +1210,7 @@ notice.ask_for_friendship.summary=Friendship request from {0}.
 online_label.connecting=Connecting
 online_label.disabled=Disabled
 online_label.online=Online
+online_label.not_loggedin=Not logged in
 
 online_storage.account_data=Unable to login. Please check or recover your password (back).
 online_storage.connecting=Connecting to server
@@ -1300,10 +1301,7 @@ preferences.dialog.folder_sync_text=Warning day(s)
 preferences.dialog.skin_text=Skin
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
-preferences.dialog.information_panel=Information panel
-preferences.dialog.information_panel_separate=Separate window
-preferences.dialog.information_panel_left=Panel to left of the main panel
-preferences.dialog.information_panel_right=Panel to right of the main panel
+preferences.dialog.information_panel_docked=Information window docked
 preferences.dialog.language=Language
 preferences.dialog.lan_line_settings=LAN speed
 preferences.dialog.line_settings=Internet speed
