--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1372,7 +1372,7 @@ preferences.dialog.use.udt.connections=Use UDT connections
 preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow local network or VPN (this may effect your CPU load)
 preferences.dialog.use_delta_on_internet.tooltip=Useful to save time by transferring only changed parts of files
 preferences.dialog.use_pf_icon=Use {APPNAME} icon in Windows
-preferences.dialog.show_pf_link=Display {APPNAME} folders in Links
+preferences.dialog.show_pf_link=Shortcut to {APPNAME} data
 preferences.dialog.use_mass_delete=Use mass delete protection
 preferences.dialog.mass_delete_threshold=Mass delete threshold
 preferences.dialog.zip_compression=ZIP compression
