--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1499,6 +1499,7 @@ status.chat_pending=There are chat messages waiting
 
 tray_icon_manager.status_change.connected={APPNAME} is connected
 tray_icon_manager.status_change.disabled={APPNAME} is disabled
+tray_icon_manager.status_change.connecting={APPNAME} is connecting
 tray_icon_manager.status_change.title=Connection Status
 status_bar.sleep.tips=Disable folder change scanning
 status_bar.no_sleep.tips=Enable folder change scanning
