--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -351,9 +351,13 @@ action_undo_auto_create.description=Undo autocreate
 action_undo_auto_create.key=U
 action_undo_auto_create.name=Undo
 
-action_webdav.description=Mount as drive
+action_webdav.description=Mount this folder as networked drive via WebDAV
 action_webdav.key=M
-action_webdav.name=Mount
+action_webdav.name=Mount as drive
+
+action_webview.description=Opens the web browser to view the files of the folder
+action_webview.key=B
+action_webview.name=Open in web
 
 pro.action_open_license_file.description=Opens a license key file from disk
 pro.action_open_license_file.key=O
