--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -180,4 +180,4 @@ upload_picto.icon=de/dal33t/powerfolder/skin/lightsky/icons/pictos/Upload.png
 user_picto.icon=de/dal33t/powerfolder/skin/lightsky/icons/pictos/User.png
 wake_up.icon=de/dal33t/powerfolder/skin/lightsky/icons/WakeUp.png
 warning.icon=de/dal33t/powerfolder/skin/lightsky/icons/Warning.png
-
+action_webview.icon=de/dal33t/powerfolder/skin/lightsky/icons/OnlineFolder.png
