--- a/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/mauvemetal/icons.properties
@@ -157,3 +157,4 @@ upload_picto.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/pictos/Upload.png
 user_picto.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/pictos/User.png
 wake_up.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/WakeUp.png
 warning.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/Warning.png
+action_webview.icon=de/dal33t/powerfolder/skin/mauvemetal/icons/OnlineFolder.png
