--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder1/icons.properties
@@ -182,4 +182,4 @@ upload_picto.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pictos/Upload.pn
 user_picto.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pictos/User.png
 wake_up.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/WakeUp.png
 warning.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/Warning.png
-
+action_webview.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/OnlineFolder.png
