--- a/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/powerfolder2/icons.properties
@@ -176,4 +176,4 @@ upload_picto.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/pictos/Upload.pn
 user_picto.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/pictos/User.png
 wake_up.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/WakeUp.png
 warning.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/Warning.png
-
+action_webview.icon=de/dal33t/powerfolder/skin/powerfolder2/icons/OnlineFolder.png
