--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -143,7 +143,7 @@ action_configure_transfer_mode.description=Configure this transfer mode
 action_configure_transfer_mode.key=C
 action_configure_transfer_mode.name=Configure
 
-action_clear_problem.description=Clear problem(s) from list
+action_clear_problem.description=Clear problems from list
 action_clear_problem.key=C
 action_clear_problem.name=Cleanup
 
@@ -307,7 +307,7 @@ action_single_file_transfer_accept.description=Accept a single file transfer
 action_single_file_transfer_accept.key=A
 action_single_file_transfer_accept.name=Accept
 
-action_resolve_problem.description=Resolve problem(s)
+action_resolve_problem.description=Resolve problems
 action_resolve_problem.key=R
 action_resolve_problem.name=Resolve
 
@@ -593,8 +593,8 @@ chat_panel.cannot_deliver=Message can not be delivered because '{0}' is not conn
 chat_panel.close_button.tool_tip=Close chat session with {0}
 chat_panel.chat_advice.text={0} is typing...
 check_status.in_sync_all=All Folders are in sync
-check_status.powerfolders={0} in {1} folder(s)
-check_status.syncing=Syncing {0} folder(s)
+check_status.powerfolders={0} in {1} folders
+check_status.syncing=Syncing {0} folders
 check_status.title=Status of My Folders
 
 computers_tab.no_computers_available=No computers available
@@ -636,7 +636,7 @@ dialog.already_running.title=Already running
 dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.bind_error.option.exit=Exit {APPNAME}
 dialog.bind_error.option.ignore=Continue
-dialog.bind_error.option.text=Unable to bind on specified port(s)\!\nA port is required for {APPNAME} to\nreceive incoming connections.
+dialog.bind_error.option.text=Unable to bind on specified port\!\nA port is required for {APPNAME} to\nreceive incoming connections.
 dialog.bind_error.option.title=Port binding error\!
 dialog.bind_error=Unable to bind port\!
 dialog.connect.connecting=Connecting
@@ -725,7 +725,7 @@ debug_information_card.title=Debug
 downloads_information_card.title=Downloads
 downloads_information_card.auto_cleanup.immediate=Immediate
 downloads_information_card.auto_cleanup.never=Never
-downloads_information_card.auto_cleanup.days={0} day(s)
+downloads_information_card.auto_cleanup.days={0} days
 downloads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
 
 download.busy.description=Downloading files to your folder
@@ -754,12 +754,12 @@ exp_folder_view.files=Files: {0}
 exp_folder_view.files_available={0} available
 exp_folder_view.folder_local_text=On this computer
 exp_folder_view.folder_online_text=Available folder
-exp_folder_view.folder_typical_text=Typical folder
+exp_folder_view.folder_typical_text=Recommended folder
 exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.members=Members: {0} ({1} connected)
 exp_folder_view.never_synchronized=Sync never done
-exp_folder_view.new_files_tip_text={0} new file(s)
+exp_folder_view.new_files_tip_text={0} new files
 exp_folder_view.unsynchronized=Not in sync
 exp_folder_view.unsynchronized.tip=There are no connected folder members
 exp_folder_view.synchronized=Sync {0}%
@@ -866,7 +866,7 @@ find_computers_panel.search_for_computer.tooltip=Enter three or more characters 
 folder.info_tip=Contains files and folders managed by {APPNAME}
 
 folders_list.local_folders=On this computer
-folders_list.typical_folders=Typical folders
+folders_list.typical_folders=Recommended folders
 folders_list.online_folders=Available folders
 folders_list.collapse_hint=Collapse group
 folders_list.expand_hint=Expand group
@@ -874,10 +874,10 @@ folders_list.expand_hint=Expand group
 folder_create.os_error.text=Unable to setup the cloud to backup folder {0}
 folder_create.dialog.select_directory.text=Select directory
 
-folder_problem.unsynchronized=Folder {0} has not been in sync for {1} day(s)
+folder_problem.unsynchronized=Folder {0} has not been in sync for {1} days
 folder_problem.unsynchronized.soln_desc=Synchronize folder
-folder_problem.unsynchronized_minutes=Folder {0} has not been in sync for {1} minutes(s)
-folder_problem.unsynchronized_hours=Folder {0} has not been in sync for {1} hour(s)
+folder_problem.unsynchronized_minutes=Folder {0} has not been in sync for {1} minutess
+folder_problem.unsynchronized_hours=Folder {0} has not been in sync for {1} hours
 folder_problem.device_disconnected=Unable to access device. Currently not available.
 folder_problem.device_disconnected.remove_folder=Stop syncing folder.
 folder_problem.table_model.date=Date
@@ -966,7 +966,7 @@ friendship.notification.message=You have received a connection request.
 friendship.notification.title=Connection request received
 
 folders_tab.auto_accept.text=Auto setup folders
-folders_tab.auto_accept.tip=Automatically setup new folders.
+folders_tab.auto_accept.tip=Automatically setup new folders on this computer.
 folders_tab.connecting=Connecting...
 folders_tab.not_logged_in=Not logged in
 folders_tab.login=(Login)
@@ -1000,13 +1000,13 @@ general.files=Files
 general.folder=Folder
 general.folder_name=Name
 general.friday=Friday
-general.hours=Hour(s)
+general.hours=Hours
 general.inviter=Inviter
 general.local_copy_at=Local copy at
 general.localized_date_format=MMMM dd yyyy
 general.localnet=LAN
 general.message=Message
-general.minutes=Minute(s)
+general.minutes=Minutes
 general.network_mode.lan_only=LAN only
 general.network_mode.private=LAN and Internet
 general.network_mode.server_only=Server only
@@ -1025,7 +1025,7 @@ general.saturday=Saturday
 general.save.key=S
 general.save=Save
 general.search=Search
-general.seconds=Second(s)
+general.seconds=Seconds
 general.server=Server
 general.email=Email
 general.password=Password
@@ -1044,23 +1044,23 @@ general.wednesday=Wednesday
 general.what_is_this=What is this?
 general.yesterday=Yesterday
 
-status_tab.computers=Computer(s)
-status_tab.files_available=File(s) available
-status_tab.files_downloads=Download(s)
-status_tab.files_downloads_active=Download(s) ({0} KB/s)
-status_tab.files_uploads=Upload(s)
-status_tab.files_uploads_active=Upload(s) ({0} KB/s)
-status_tab.folders=Folder(s)
+status_tab.computers=Computers
+status_tab.files_available=Files available
+status_tab.files_downloads=Downloads
+status_tab.files_downloads_active=Downloads ({0} KB/s)
+status_tab.files_uploads=Uploads
+status_tab.files_uploads_active=Uploads ({0} KB/s)
+status_tab.folders=Folders
 status_tab.in_sync=All folders are in sync
 status_tab.last_synced=Last sync {0}
 status_tab.local=Local
 status_tab.never_synced=Folders never in sync
-status_tab.new_invitations=New invitation(s)
-status_tab.new_single_file_offers=New single file offer(s)
-status_tab.unread_notices=Unread notice(s)
-status_tab.new_friendship_notices=Friendship request(s)
-status_tab.new_warning_notices=Warning(s)
-status_tab.new_invitation_notices=Invitations(s)
+status_tab.new_invitations=New invitations
+status_tab.new_single_file_offers=New single file offers
+status_tab.unread_notices=Unread notices
+status_tab.new_friendship_notices=Friendship requests
+status_tab.new_warning_notices=Warnings
+status_tab.new_invitation_notices=Invitationss
 status_tab.no_computers=No other computers known
 status_tab.no_folders=No folders configured. Click "Wizard" to start.
 status_tab.not_running=Not running
@@ -1096,7 +1096,7 @@ status_tab.you_have=You have
 pro.status_tab.upgrade_powerfolder=Buy {APPNAME} now
 pro.status_tab.renew_license=Renew {APPNAME}
 pro.status_tab.remaining.tips=Your license will expire in {0} days
-pro.status_tab.remaining={0} day(s) remaining
+pro.status_tab.remaining={0} days remaining
 pro.status_tab.disabled=Not running. Activate now
 pro.status_tab.disabled.tips=Click to learn why {APPNAME} is currently disabled.
 
@@ -1256,7 +1256,7 @@ preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address {APPNAME} should use
 preferences.dialog.bind=Interface address
 preferences.dialog.bindDescr=Interface description
-preferences.dialog.dialogs.create_powerfolders_shotrcut=Create PowerFolders desktop shortcut 
+preferences.dialog.dialogs.create_powerfolders_shotrcut=Create desktop shortcut
 preferences.dialog.default_archive_mode.text=Default archive mode
 preferences.dialog.delta_sync=Delta sync
 preferences.dialog.delta_sync.tooltip=Sync only the changes in files
@@ -1301,7 +1301,7 @@ preferences.dialog.exit_behavior.exit=Exit program
 preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.dialog.exit_behavior=Exit behavior
 preferences.dialog.folder_sync_warn.use=Warn if folders are not in sync
-preferences.dialog.folder_sync_text=Warning day(s)
+preferences.dialog.folder_sync_text=Warning days
 preferences.dialog.skin_text=Skin
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
@@ -1541,8 +1541,8 @@ systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.down=Down {0} KBs
 systray.tooltip.in_sync=in sync
 systray.tooltip.syncing=syncing
-systray.tooltip.not_connected=not connected
-systray.tooltip.not_logged_in=not logged in
+systray.tooltip.not_connected=Not connected
+systray.tooltip.not_logged_in=Not logged in
 systray.tooltip.new_problem=New problem
 systray.tooltip.new_notice=New notice
 systray.tooltip.new_chat_message=New chat message
@@ -1594,14 +1594,14 @@ uicontroller.sync_info.start=Synchronization has been triggered successfully.
 uicontroller.sync_info.new={0} new
 uicontroller.sync_info.changed={0} changed
 uicontroller.sync_info.deleted={0} deleted
-uicontroller.sync_info.no_changes_detected=no changes detected
-uicontroller.sync_info.transfer=Going to transfer {0} file(s).
+uicontroller.sync_info.no_changes_detected=No changes detected
+uicontroller.sync_info.transfer=Going to transfer {0} files.
 
 uploads_information_card.title=Uploads
 uploads_information_card.auto_cleanup.immediate=Immediate
 uploads_information_card.auto_cleanup.never=Never
-uploads_information_card.auto_cleanup.days={0} day(s)
-uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup frequency
+uploads_information_card.auto_cleanup.days={0} days
+uploads_information_card.auto_cleanup.frequency_tip=Auto-cleanup
 
 user.dir.contacts=Contacts
 user.dir.custom=Custom
@@ -1688,8 +1688,8 @@ wizard.control.help=Help
 wizard.control.next.description=Go to next wizard step
 wizard.control.next=Next
 wizard.worker.problem=Problem occurred
-wizard.create_folder.title=Creating Folder(s)
-wizard.create_folder.working=Creating folder(s), please wait.
+wizard.create_folder.title=Creating Folders
+wizard.create_folder.working=Creating folders, please wait.
 wizard.create_folder.found_online.title=Folder already found
 wizard.create_folder.found_online.text=An existing folder has been found with this name ({0}).\n\nDo you want to synchronize with existing folder? (Recommended)
 wizard.create_folder.found_online.join=Sync existing folder
@@ -1730,22 +1730,22 @@ wizard.multi_file_restore_panel.retrieving=Retrieving file version information {
 wizard.multi_file_restore_panel.retrieving_failure=Sorry, could not retrieve file version information.
 wizard.multi_file_restore_panel.retrieving_success=File version information has been retrieved.
 wizard.multi_file_restore_panel.retrieving_none=No file version information available.
-wizard.multi_file_restore_panel.button_latest=Latest version(s)
-wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the file(s).
-wizard.multi_file_restore_panel.button_date=Date specific version(s)
-wizard.multi_file_restore_panel.button_date.tip=Restore version(s) from a specific date.
+wizard.multi_file_restore_panel.button_latest=Latest version
+wizard.multi_file_restore_panel.button_latest.tip=Restore the latest version of the files.
+wizard.multi_file_restore_panel.button_date=Date specific versions
+wizard.multi_file_restore_panel.button_date.tip=Restore versions from a specific date.
 wizard.multi_file_restoring_panel.working=Restoring file {0} of {1}, please wait.
 
 wizard.multi_file_restoring_panel.success_title=Files restored
-wizard.multi_file_restoring_panel.success_text=The requested file(s) have been restored.
-wizard.multi_file_restoring_panel.partial_text={0} of {1} file(s) have been restored.
+wizard.multi_file_restoring_panel.success_text=The requested files have been restored.
+wizard.multi_file_restoring_panel.partial_text={0} of {1} files have been restored.
 wizard.multi_file_restoring_panel.fail_title=File restore failed
 wizard.multi_file_restoring_panel.fail_text=No files have been restored.
 
 wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
-wizard.multi_online_storage_setup.title=Configure folder(s)
+wizard.multi_online_storage_setup.title=Configure folders
 wizard.typical_folder_setup.title=Configure folder
 wizard.pfwizard.folder_title=Folder Wizard
 pro.wizard.pfwizard.activation_title=Activation Wizard
@@ -1817,7 +1817,7 @@ wizard.what_to_do.title=What do you want to do?
 
 wizard.tell_friend.title=Tell someone about {APPNAME}
 wizard.tell_friend.add_email_address=Please enter the email addresses (one per line)
-wizard.tell_friend.personal_message=Please enter a message for the receiver(s) (optional)
+wizard.tell_friend.personal_message=Please enter a message for the receivers (optional)
 wizard.tell_friend.title.warning_title=Invalid email address
 wizard.tell_friend.title.warning_bad_email='{0}' is not a valid email address
 wizard.tell_friend.success=Emails have been sent to the recipients.
