Display chat message preference, refs #2445

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1190,6 +1190,7 @@ folder_auto_create_notice.text=A new folder has been found: {0}
 
 notification_form.title=<html><b>{APPNAME}</b><br>{0}</html>
 notification_form.never_show_chat_notifications=Never show chat notifications
+notification_form.display_chat_messages=Display chat messages
 notification_form.never_show_system_notifications=Never show system notifications
 
 notification_handler.display.text=Display
@@ -1339,6 +1340,7 @@ preferences.dialog.server_disconnect.nosync=Enforce permission checks. Don't syn
 preferences.dialog.show_advanced=Show advanced preferences
 preferences.dialog.backup_only_clinet=Backup-only client
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
+preferences.dialog.show_chat_messages=Display chat messages in notification area
 preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_auto_created_folders=Show notification of autocreated folders
 preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
@@ -1536,6 +1538,7 @@ systray.sync_shutdown=Sync and Shutdown
 systray.sync_exit=Sync and Exit
 systray.notifications=Notifications
 systray.notifications.chat=Show Chat Notifications
+systray.notifications.chat.messages=Display Chat Messages
 systray.notifications.system=Show System Notifications
 systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.down=Down {0} KBs
