--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -585,6 +585,9 @@ chat_frame.tool_tip=Chat with {0}
 chat.notification.message=You have received a chat message.
 chat.notification.title=Chat Message Received
 
+chat_notification_handler.reply=Reply
+chat_notification_handler.ignore=Ignore
+
 chat_panel.member_connected_at_time={0} connected at {1}
 chat_panel.member_disconnected_at_time={0} disconnected at {1}
 chat_panel.member_joined_folder_at_time={0} joined folder {1} at {2}
