Display sender's name, fixes #2445

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -584,6 +584,7 @@ chat_frame.tool_tip=Chat with {0}
 
 chat.notification.message=You have received a chat message.
 chat.notification.title=Chat Message Received
+chat.notification.title_long=Chat message from {0}
 
 chat_notification_handler.reply=Reply
 chat_notification_handler.ignore=Ignore
