--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -969,7 +969,7 @@ friend_search.node_table.on_local_network=LAN
 friendship.notification.message=You have received a connection request.
 friendship.notification.title=Connection request received
 
-folders_tab.auto_accept.text=Auto setup folders
+folders_tab.auto_accept.text=Auto setup
 folders_tab.auto_accept.tip=Automatically setup new folders on this computer.
 folders_tab.connecting=Connecting...
 folders_tab.not_logged_in=Not logged in
