Better update messages, fixes #2458

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -712,8 +712,8 @@ dialog.synchronization.sychronizing=Syncing...
 dialog.synchronization.title=Manual sync
 dialog.unable_to_connect_to_member=Unable to connect to {0}
 dialog.unable_to_open_port=Unable to open on local port {0}, maybe {APPNAME} is already running
-dialog.update.updating.text=Downloading update
-dialog.update.updating=Updating
+dialog.update.updating.text=Downloading version {0} of {APPNAME}.
+dialog.update.updating={APPNAME} is updating
 dialog.update_check.downloadAndUpdate=Download and update now
 dialog.update_check.downloadAndUpdateSilent=Download and silently update now
 dialog.update_check.failed.text=Update failed. Please check your Internet connection.
