Better 'no file' text, refs #2457

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -861,6 +861,13 @@ filter_text_field.menu.modifier.text=Filter by modifier
 filter_text_field.menu.computer.text=Filter for {0}
 filter_text_field.tip=Filter results
 files_table_panel.no_files_available=No files available
+files_table_panel.no_files_available.local_and_incoming=No files found
+files_table_panel.no_files_available.local_only=No files found on this computer
+files_table_panel.no_files_available.incoming_only=No files found to download
+files_table_panel.no_files_available.new_only=No recently downloaded files found
+files_table_panel.no_files_available.deleted_previous=No deleted files found
+files_table_panel.no_files_available.unsynchronized=No unsynchronized files found
+
 files_table_panel.finding_files=Finding files...
 
 find_computers_dialog.title=Find computers
