Begin reset link, refs #2457

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -123,6 +123,10 @@ action_remove_folder.description=Remove this folder
 action_remove_folder.key=R
 action_remove_folder.name=Remove
 
+action.reset_filters.description=Reset file filters to default values
+action.reset_filters.key=R
+action.reset_filters.name=Reset filters
+
 action_details.description=Display the details panel
 action_details.key=D
 action_details.name=Details
