--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1038,6 +1038,7 @@ general.search=Search
 general.seconds=Seconds
 general.server=Server
 general.email=Email
+general.username=Username
 general.password=Password
 general.select=Select
 general.size=Size
@@ -1638,9 +1639,7 @@ user.dir.sites=Sites
 user.dir.dropbox=My Dropbox
 
 uilock.dialog.title=User interface locked
-uilock.dialog.info=Enter username/email and password to unlock.
-uilock.dialog.username=Username:
-uilock.dialog.password=Password:
+uilock.dialog.info=Enter login credentials to unlock the user interface.
 uilock.dialog.help=Help
 uilock.dialog.exit=Exit
 uilock.dialog.error.wronglogin=Invalid username or password.
@@ -1791,10 +1790,8 @@ wizard.webservice.learn_more=What is cloud space?
 wizard.webservice.login=Login
 wizard.webservice.mirror_folder=Back up this folder online?
 wizard.webservice.mirror_setup=Backup folder online
-wizard.webservice.password=Password:
 wizard.webservice.unmirror_folder=Remove this folder from cloud
 wizard.webservice.unmirror_setup=Remove folder online
-wizard.webservice.username=Email:
 wizard.what_to_do.backp.select=Please select the files to backup
 wizard.what_to_do.backup_folder.tip=Choose this option to backup files to other computers
 wizard.what_to_do.backup_folder=Backup files
