Take overwrite value directly from Default.config

--- a/src/distribution/PowerFolderBasic/Default.config
+++ b/src/distribution/PowerFolderBasic/Default.config
@@ -4,6 +4,9 @@
 
 pref.skin.name=Snowland (Basic)
 backup.only.client=false
+server.username.isemail=true
+# Always overwrite existing config/preferences
+config.overwrite=true
 
 update.version.url=http://checkversion.powerfolder.com/PowerFolder_LatestVersion.txt
 update.download_info.url=http://checkversion.powerfolder.com/PowerFolder_DownloadLocation.txt
