Added info about archive

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -940,7 +940,7 @@ folder_problem.noconflictdetection=File {0} from {1} might have a version confli
 
 folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=Remove
-folder_remove.dialog.delete=Delete meta-data
+folder_remove.dialog.delete=Delete archive and meta-data
 folder_remove.dialog.remove_from_local=Stop to sync local
 folder_remove.dialog.remove_from_os=Remove online
 folder_remove.dialog.sync_warning=The Folder is currently syncing\!
